--- a/BrowserTabManager/MainWindow.xaml
+++ b/BrowserTabManager/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BrowserTabManager"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="1000">
+        Title="Peder's Concept Web Browser" Height="450" Width="1000">
     <Grid x:Name="MasterGrid">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -16,79 +16,68 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="150" />
                 <ColumnDefinition Width="4" />
+                <ColumnDefinition Width="75" />
                 <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="75" />
                 <ColumnDefinition Width="4" />
                 <ColumnDefinition Width="150" />
             </Grid.ColumnDefinitions>
             <!-- Bookmarks Grid -->
-            <Button x:Name="ShowHideBookmarksButton" Content="Bookmarks" Margin="0,0,0,0" Background="#f5f5f5" BorderBrush="#b0b0b0" BorderThickness="1" Padding="10,2" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+            <Button x:Name="ShowHideBookmarksButton" Content="Bookmarks" ToolTip="Toggle Bookmarks Panel" 
+                    Margin="0,0,0,0" Background="#f5f5f5" BorderBrush="#b0b0b0" BorderThickness="1" 
+                    Padding="10,2" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+
             <!-- Launch URL StackPanel -->
-            <StackPanel Orientation="Horizontal" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,0">
-                <Label x:Name="CurrentScreenLabel" Content="Screen" VerticalAlignment="Center" Margin="0,0,5,0"/>
-                <Button x:Name="btnPreviousScreen" Content="Prev" Margin="4,4,0,4" Height="28" MinWidth="70" VerticalAlignment="Center"></Button>
-                <TextBox x:Name="ScreenNameTextBox" Margin="16,4,8,4" Height="28" Width="260" VerticalAlignment="Center" FontSize="14" Padding="8,0,8,0" Background="White" BorderBrush="#CCC" BorderThickness="1">
-                    <TextBox.Style>
-                        <Style TargetType="TextBox">
-                            <Setter Property="Template">
-                                <Setter.Value>
-                                    <ControlTemplate TargetType="TextBox">
-                                        <Grid>
-                                            <Border CornerRadius="2" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1">
-                                                <ScrollViewer Margin="0" x:Name="PART_ContentHost"/>
-                                            </Border>
-                                            <ContentControl x:Name="Watermark"
-                                                           IsHitTestVisible="False"
-                                                           Content="Give this screen a name"
-                                                           Foreground="#888"
-                                                           Margin="16,0,0,0"
-                                                           VerticalAlignment="Center"
-                                                           Opacity="0.8"
-                                                           Visibility="Collapsed"/>
-                                        </Grid>
-                                        <ControlTemplate.Triggers>
-                                            <Trigger Property="Text" Value="">
-                                                <Setter TargetName="Watermark" Property="Visibility" Value="Visible"/>
-                                            </Trigger>
-                                        </ControlTemplate.Triggers>
-                                    </ControlTemplate>
-                                </Setter.Value>
-                            </Setter>
-                            <Setter Property="Background" Value="White"/>
-                            <Setter Property="BorderBrush" Value="#CCC"/>
-                            <Setter Property="BorderThickness" Value="1"/>
-                            <Setter Property="Padding" Value="8,0,8,0"/>
-                        </Style>
-                    </TextBox.Style>
-                </TextBox>
-                <Button x:Name="btnNextScreen" Content="Next" Margin="4,4,0,4" Height="28" MinWidth="70" VerticalAlignment="Center"></Button>
-                <Button x:Name="NewTabButton" Content="New Tab" Margin="4,4,0,4" Height="28" MinWidth="70" VerticalAlignment="Center" Background="#f5f5f5" BorderBrush="#b0b0b0" BorderThickness="1">
+            <StackPanel Orientation="Horizontal" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,0">
+                <Button x:Name="NewTabButton" Content="Add a Tab to This Screen" ToolTip="Add a new tab to current screen" Margin="4,4,4,4" Height="28" MinWidth="150" VerticalAlignment="Center" Background="#f5f5f5" BorderBrush="#b0b0b0" BorderThickness="1">
                     <Button.Template>
                         <ControlTemplate TargetType="Button">
-                            <Border CornerRadius="14" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1">
+                            <Border x:Name="border" CornerRadius="14" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1">
                                 <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                             </Border>
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter TargetName="border" Property="Background" Value="#BEE6FD"/>
+                                </Trigger>
+                            </ControlTemplate.Triggers>
                         </ControlTemplate>
                     </Button.Template>
                 </Button>
-                <Button x:Name="NewScreenButton" Content="New Screen" Margin="4,4,0,4" Height="28" MinWidth="90" VerticalAlignment="Center">
+                
+                <Border x:Name="ScreenNavigationBorder" BorderBrush="#b0b0b0" BorderThickness="1" CornerRadius="14" Background="White" Height="28">
+                    <StackPanel Orientation="Horizontal">
+                        <Button x:Name="btnPreviousScreen" ToolTip="Go to Previous Screen" Margin="4,4,0,4" Height="15" Width="24" VerticalAlignment="Center" Padding="0,0,0,0" Background="Transparent" BorderThickness="0">
+                            <Image Source="pack://application:,,,/Icons/PrevScreen.png" Stretch="Uniform" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                        </Button>
+                        <Label x:Name="CurrentScreenLabel" Content="Screen" VerticalAlignment="Center" Margin="0,0,0,0" MouseLeftButtonUp="CurrentScreenLabel_MouseLeftButtonUp"/>
+                        <Button x:Name="btnNextScreen" ToolTip="Go to Next Screen" Margin="0,4,4,4" Height="15" Width="24" VerticalAlignment="Center" Padding="0,0,0,0" Background="Transparent" BorderThickness="0">
+                            <Image Source="pack://application:,,,/Icons/NextScreen.png" Stretch="Uniform" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                        </Button>
+                    </StackPanel>
+                </Border>
+
+                <Button x:Name="NewScreenButton" Content="Start a New Screen" ToolTip="Start a new screen" Margin="4,4,0,4" Height="28" MinWidth="130" VerticalAlignment="Center" Background="#f5f5f5" BorderBrush="#b0b0b0" BorderThickness="1">
                     <Button.Template>
                         <ControlTemplate TargetType="Button">
-                            <Border CornerRadius="14" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1">
+                            <Border x:Name="border" CornerRadius="14" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1">
                                 <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                             </Border>
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter TargetName="border" Property="Background" Value="#BEE6FD"/>
+                                </Trigger>
+                            </ControlTemplate.Triggers>
                         </ControlTemplate>
                     </Button.Template>
                 </Button>
+
             </StackPanel>
             <!-- Tabs StackPanel -->
-            <Border x:Name="ShowTabListBorder" Grid.Column="4" Background="#f5f5f5" BorderBrush="#b0b0b0" BorderThickness="1" Padding="6,2" Margin="0,0,0,0">
-                <Grid x:Name="ShowTabListGrid"  Margin="0,0,0,0" >
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
-                    <Button x:Name="ShowHideTabListButton" Content="Tab List" Margin="0,0,0,0" Background="Transparent" BorderThickness="0" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" Padding="0,0,0,0" />
-                </Grid>
-            </Border>
+
+            <Button x:Name="ShowHideTabListButton" Grid.Column="6"  Content="Tab List" ToolTip="Toggle Tab List Panel" 
+                    Margin="0,0,0,0" Background="#f5f5f5" BorderBrush="#b0b0b0" BorderThickness="1"  HorizontalAlignment="Stretch" 
+                    VerticalAlignment="Stretch" HorizontalContentAlignment="Center" Padding="0,0,0,0" />
+
         </Grid>
         <Grid x:Name="CenterMasterGrid" Grid.Row="1" Margin="0,0,0,0">
             <Grid.ColumnDefinitions>
@@ -108,9 +97,6 @@
                 <StackPanel x:Name="BookmarkGridSearch" Grid.Row="0" Orientation="Vertical">
 
                     <TextBox x:Name="txtSearchBookmarks" Margin="8,5,8,5" Height="20">
-                        <TextBox.Effect>
-                            <DropShadowEffect Color="Black" BlurRadius="6" ShadowDepth="1" Opacity="0.18"/>
-                        </TextBox.Effect>
                         <TextBox.Style>
                             <Style TargetType="TextBox">
                                 <Setter Property="Template">
@@ -124,7 +110,7 @@
                                                                IsHitTestVisible="False"
                                                                Content="Search Bookmarks"
                                                                Foreground="#888"
-                                                               Margin="16,0,0,0"
+                                                               Margin="10,0,0,0"
                                                                VerticalAlignment="Center"
                                                                Opacity="0.8"
                                                                Visibility="Collapsed"/>
@@ -151,16 +137,16 @@
             </Grid>
 
             <!-- GridSplitter between Column 0 and 2 -->
-            <GridSplitter Grid.Column="1" Width="4" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ResizeBehavior="PreviousAndNext" Background="#a0b0c1"/>
+            <GridSplitter Grid.Column="1" Width="4" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ResizeBehavior="PreviousAndNext" Background="#8b99a9"/>
 
             <!-- Grid in Column 2 with two rows -->
-            <Grid x:Name="FeatureGrid" Grid.Column="2" Grid.Row="0"  Background="#a0b0c1" ClipToBounds="False">
+            <Grid x:Name="FeatureGrid" Grid.Column="2" Grid.Row="0"  Background="#8b99a9" ClipToBounds="False">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
-                <Grid x:Name="FramesGrid" Grid.Row="0" Grid.Column="0" Margin="1,5,1,5" Background="#a0b0c1">
+                <Grid x:Name="FramesGrid" Grid.Row="0" Grid.Column="0" Margin="1,5,1,5" Background="#8b99a9">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
@@ -172,7 +158,7 @@
             </Grid>
 
             <!-- GridSplitter between Column 2 and 4 -->
-            <GridSplitter Grid.Column="3" Width="4" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ResizeBehavior="PreviousAndNext" Background="#a0b0c1"/>
+            <GridSplitter Grid.Column="3" Width="4" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ResizeBehavior="PreviousAndNext" Background="#8b99a9"/>
 
             <!-- Grid in Column 4 with two rows -->
             <Grid x:Name="TabGrid" Grid.Column="4" Background="#E2E6EC">
@@ -198,9 +184,9 @@
                                                 </Border>
                                                 <ContentControl x:Name="Watermark"
                                                                IsHitTestVisible="False"
-                                                               Content="Search Tabs"
+                                                               Content="Search Tab List"
                                                                Foreground="#888"
-                                                               Margin="16,0,0,0"
+                                                               Margin="10,0,0,0"
                                                                VerticalAlignment="Center"
                                                                Opacity="0.8"
                                                                Visibility="Collapsed"/>
@@ -230,18 +216,53 @@
                 <ColumnDefinition Width="150" />
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="150" />
             </Grid.ColumnDefinitions>
-            <StackPanel x:Name="ManageRowsPanel" Orientation="Horizontal" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,0,7,0" >
-                <Label Content="Rows" Grid.Row="1" VerticalAlignment="Center" Margin="0,0,0,0" Padding="2,2,4,4"/>
-                <Button x:Name="btnSubtractRowFromFramesGrid" Width="15" Height="15" Background="#f5f5f5" BorderBrush="#b0b0b0" BorderThickness="1" Padding="0,0,0,0" ToolTip="Remove Row" Margin="0,0,5,0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">
+            <TextBox x:Name="ScreenNameTextBox" Grid.Column="2" Margin="0,4,0,4" Height="20" Width="260" VerticalAlignment="Center" FontSize="{Binding ElementName=CurrentScreenLabel, Path=FontSize}" Padding="4,1,8,0" Background="White" BorderBrush="#CCC" BorderThickness="1">
+                <TextBox.Style>
+                    <Style TargetType="TextBox">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="TextBox">
+                                    <Grid>
+                                        <Border CornerRadius="2" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1">
+                                            <ScrollViewer Margin="0" x:Name="PART_ContentHost"/>
+                                        </Border>
+                                        <ContentControl x:Name="ScreenNameWatermark"
+                                                               IsHitTestVisible="False"
+                                                               Content="Give this screen a name"
+                                                               Foreground="#888"
+                                                               Margin="6,0,0,0"
+                                                               VerticalAlignment="Center"
+                                                               Opacity="0.8"
+                                                               Visibility="Collapsed"/>
+                                    </Grid>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="Text" Value="">
+                                            <Setter TargetName="ScreenNameWatermark" Property="Visibility" Value="Visible"/>
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                        <Setter Property="Background" Value="White"/>
+                        <Setter Property="BorderBrush" Value="#CCC"/>
+                        <Setter Property="BorderThickness" Value="1"/>
+                        <Setter Property="Padding" Value="8,0,8,0"/>
+                    </Style>
+                </TextBox.Style>
+            </TextBox>
+            <StackPanel x:Name="ManageRowsPanel" Orientation="Horizontal" Grid.Column="3" Opacity="0.5" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,2,8,0" >
+                <Label Content="Rows in this screen" Grid.Row="1" VerticalAlignment="Center" Margin="0,0,0,0" Padding="2,2,4,4"/>
+                <Button x:Name="btnSubtractRowFromFramesGrid" Width="15" Height="15" Background="#f5f5f5" BorderBrush="#b0b0b0" BorderThickness="1" Padding="0,0,0,0" ToolTip="Remove Row from Current Screen" Margin="0,0,5,0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">
                     <Button.Effect>
                         <DropShadowEffect Color="Black" BlurRadius="4" ShadowDepth="1" Opacity="0.18"/>
                     </Button.Effect>
                     <Image Source="pack://application:,,,/Icons/Minus.png" Stretch="Uniform" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                 </Button>
                 
-                <Button x:Name="btnAddRowToFramesGrid" Width="15" Height="15" Background="#f5f5f5" BorderBrush="#b0b0b0" BorderThickness="1" Padding="0,0,0,0" ToolTip="Add Row" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">
+                <Button x:Name="btnAddRowToFramesGrid" Width="15" Height="15" Background="#f5f5f5" BorderBrush="#b0b0b0" BorderThickness="1" Padding="0,0,0,0" ToolTip="Add Row to Current Screen" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">
                     <Button.Effect>
                         <DropShadowEffect Color="Black" BlurRadius="4" ShadowDepth="1" Opacity="0.18"/>
                     </Button.Effect>
